fix the portfolio section and contact details page  spacing and added auto background c hange in every 5sec

--- a/frontend/src/pages/ContactUsPage/ContactDetailsSection.css
+++ b/frontend/src/pages/ContactUsPage/ContactDetailsSection.css
@@ -7,6 +7,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
+  padding-left: 4vw;
+  padding-right: 4vw;
+  box-sizing: border-box;
 }
 
 
@@ -24,6 +27,8 @@
   background: #ffffff;
   border-radius: 16px;
   padding: 3rem 16rem;
+  padding-left: 12vw;
+  padding-right: 12vw;
 }
 
 .contact-form {
@@ -127,6 +132,8 @@ textarea:-webkit-autofill {
 @media (max-width: 820px) {
    .contact-wrapper {
     width: 820px;
+    padding-left: 2vw;
+    padding-right: 2vw;
   }
 }
 @media (max-width: 480px) {
@@ -135,12 +142,16 @@ textarea:-webkit-autofill {
     min-width: 0;
     margin: 0 ;
     padding: 0 2.5rem;
+    padding-left: 1vw;
+    padding-right: 1vw;
   }
   .contact-card {
     width: 100vw;
     max-width: 100vw;
     padding: 0;
     border-radius: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
   .contact-form {
     padding: 1rem;
